; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/platform/java/extr_mupdf_native.c_fz_java_device_fill_shade.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/platform/java/extr_mupdf_native.c_fz_java_device_fill_shade.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, %struct.TYPE_9__** }
%struct.TYPE_9__ = type { i64 (%struct.TYPE_9__**)*, i32 (%struct.TYPE_9__**, i32, i32, i32, i32, float)* }

@mid_Device_fillShade = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i32, float, i32)* @fz_java_device_fill_shade to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fz_java_device_fill_shade(i32* %0, i32* %1, i32* %2, i32 %3, float %4, i32 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca float, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.TYPE_8__*, align 8
  %14 = alloca %struct.TYPE_9__**, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store float %4, float* %11, align 4
  store i32 %5, i32* %12, align 4
  %17 = load i32*, i32** %8, align 8
  %18 = bitcast i32* %17 to %struct.TYPE_8__*
  store %struct.TYPE_8__* %18, %struct.TYPE_8__** %13, align 8
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** %13, align 8
  %20 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %19, i32 0, i32 1
  %21 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %20, align 8
  store %struct.TYPE_9__** %21, %struct.TYPE_9__*** %14, align 8
  %22 = load i32*, i32** %7, align 8
  %23 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %14, align 8
  %24 = load i32*, i32** %9, align 8
  %25 = call i32 @to_Shade(i32* %22, %struct.TYPE_9__** %23, i32* %24)
  store i32 %25, i32* %15, align 4
  %26 = load i32*, i32** %7, align 8
  %27 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %14, align 8
  %28 = load i32, i32* %10, align 4
  %29 = call i32 @to_Matrix(i32* %26, %struct.TYPE_9__** %27, i32 %28)
  store i32 %29, i32* %16, align 4
  %30 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %14, align 8
  %31 = load %struct.TYPE_9__*, %struct.TYPE_9__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %31, i32 0, i32 1
  %33 = load i32 (%struct.TYPE_9__**, i32, i32, i32, i32, float)*, i32 (%struct.TYPE_9__**, i32, i32, i32, i32, float)** %32, align 8
  %34 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %14, align 8
  %35 = load %struct.TYPE_8__*, %struct.TYPE_8__** %13, align 8
  %36 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 8
  %38 = load i32, i32* @mid_Device_fillShade, align 4
  %39 = load i32, i32* %15, align 4
  %40 = load i32, i32* %16, align 4
  %41 = load float, float* %11, align 4
  %42 = call i32 %33(%struct.TYPE_9__** %34, i32 %37, i32 %38, i32 %39, i32 %40, float %41)
  %43 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %14, align 8
  %44 = load %struct.TYPE_9__*, %struct.TYPE_9__** %43, align 8
  %45 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %44, i32 0, i32 0
  %46 = load i64 (%struct.TYPE_9__**)*, i64 (%struct.TYPE_9__**)** %45, align 8
  %47 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %14, align 8
  %48 = call i64 %46(%struct.TYPE_9__** %47)
  %49 = icmp ne i64 %48, 0
  br i1 %49, label %50, label %54

50:                                               ; preds = %6
  %51 = load i32*, i32** %7, align 8
  %52 = load %struct.TYPE_9__**, %struct.TYPE_9__*** %14, align 8
  %53 = call i32 @fz_throw_java(i32* %51, %struct.TYPE_9__** %52)
  br label %54

54:                                               ; preds = %50, %6
  ret void
}

declare dso_local i32 @to_Shade(i32*, %struct.TYPE_9__**, i32*) #1

declare dso_local i32 @to_Matrix(i32*, %struct.TYPE_9__**, i32) #1

declare dso_local i32 @fz_throw_java(i32*, %struct.TYPE_9__**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
